<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/te1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:text="@string/tag_type"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/te2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/te1"
        android:layout_marginTop="60dp"
        android:text="@string/is_tag_writable"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/te3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/te2"
        android:layout_marginTop="60dp"
        android:text="@string/tag_size"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/te4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/te3"
        android:layout_marginTop="60dp"
        android:text="@string/data_size"
        android:textAppearance="?android:attr/textAppearanceLarge" />


</RelativeLayout>